--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 loom.platform=forge
 mod_id=probejs
 archives_base_name=probejs
-mod_version=1.4.0
+mod_version=1.5.0
 maven_group=com.prunoideae
-mod_author=Prunoideae
+mod_author=Prunoideae && ZZZank
 minecraft_version=1.16.5
 forge_version=36.2.0
 kubejs_version=1605.3.19-build.251
