--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,26 @@
-org.gradle.jvmargs=-Xmx2G
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
+
+# tell architectury loom that this project is a forge project.
+# this will enable us to use the "forge" dependency.
+# using archloom without this is possible and will give you a
+# "standard" loom installation with some extra features.
 loom.platform=forge
-mod_id=probejs
-archives_base_name=probejs
-mod_version=1.6.0
-maven_group=com.prunoideae
-mod_author=Prunoideae && ZZZank
-minecraft_version=1.16.5
-forge_version=36.2.39
-kubejs_version=1605.3.19-build.299
+
+# Base properties
+    # minecraft version
+    minecraft_version=1.16.5
+    # forge version, latest version can be found on https://files.minecraftforge.net/
+    forge_version=36.2.39
+    # yarn, latest version can be found on https://fabricmc.net/develop/
+    yarn_mappings=1.16.5+build.10
+
+# Mod Properties
+    mod_version=1.6.0
+    maven_group=com.prunoideae
+    archives_base_name=probejs
+    mod_id=probejs
+    mod_author=Prunoideae && ZZZank
+
+    kubejs_version=1605.3.19-build.299
