--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,33 @@
+# gradle
+
+.gradle/
+build/
+out/
+classes/
+
 # eclipse
-bin
+
 *.launch
-.settings
-.metadata
+
+# idea
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# vscode
+
+.settings/
+.vscode/
+bin/
 .classpath
 .project
 
-# idea
-out
-*.ipr
-*.iws
-*.iml
-.idea
+# macos
 
-# gradle
-build
-.gradle
-logs
+*.DS_Store
 
-# other
-eclipse
-run
-.vscode
+# fabric
 
-# python
-*.pyc
+run/
