--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,10 @@
 pluginManagement {
-	repositories {
-		maven { url "https://maven.creeperhost.net/" }
-		maven { url "https://maven.shedaniel.me/" }
-		gradlePluginPortal()
-	}
+    // when using additional gradle plugins like shadow,
+    // add their repositories to this list!
+    repositories {
+        maven { url "https://maven.fabricmc.net/" }
+        maven { url "https://maven.architectury.dev/" }
+        maven { url "https://files.minecraftforge.net/maven/" }
+        gradlePluginPortal()
+    }
 }
-
-rootProject.name = 'ProbeJS-1.18.1'
