--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,13 @@ repositories {
             includeGroup "dev.ftb.mods"
         }
     }
+
+    maven {
+		url = "https://maven.parchmentmc.net/"
+		content {
+			includeGroup "org.parchmentmc.data"
+		}
+	}
 }
 
 dependencies {
@@ -71,7 +78,10 @@ dependencies {
     // mojang's official mappings, or feel free
     // to add your own mappings here (how about
     // mojmap layered with parchment, for example?)
-    mappings loom.officialMojangMappings()
+	mappings loom.layered() {
+		officialMojangMappings()
+		parchment("org.parchmentmc.data:parchment-${rootProject.parchment_version}")
+	}
 
     // uncomment this if you want to use yarn mappings
     // mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
