--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ loom.platform=forge
     forge_version=36.2.39
     # yarn, latest version can be found on https://fabricmc.net/develop/
     yarn_mappings=1.16.5+build.10
+    parchment_version=1.16.5:2022.03.06
 
 # Mod Properties
     mod_version=2.3.1
