--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ loom {
 }
 
 repositories {
+    mavenCentral()
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -49,7 +50,7 @@ repositories {
     maven {
         url "https://maven.architectury.dev/"
         content {
-            includeGroup "me.shedaniel"
+            includeGroup("me.shedaniel")
         }
     }
 
@@ -103,6 +104,11 @@ dependencies {
     // at runtime, use the full JEI jar
     // modRuntimeOnly "mezz.jei:jei-1.16.5:${jei_version}"
     modApi "dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}"
+
+    compileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
+    annotationProcessor "org.projectlombok:lombok:${rootProject.lombok_version}"
+    testCompileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
+    testAnnotationProcessor "org.projectlombok:lombok:${rootProject.lombok_version}"
 }
 
 processResources {
