--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ org.gradle.daemon=false
 # "standard" loom installation with some extra features.
 loom.platform=forge
 
+lombok_version=1.18.32
+
 # Base properties
     # minecraft version
     minecraft_version=1.16.5
