--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "dev.architectury.loom" version "1.3-SNAPSHOT"
     id "maven-publish"
+    id "io.github.juuxel.loom-vineflower" version "1.11.0" apply false
 }
 
 base {
@@ -108,6 +109,16 @@ dependencies {
     // https://mvnrepository.com/artifact/com.pkware.jabel/jabel-javac-plugin
     annotationProcessor 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     compileOnly 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
+    //
+    compileOnly 'org.java-websocket:Java-WebSocket:1.5.6'
+    include 'org.java-websocket:Java-WebSocket:1.5.6'
+    //
+    compileOnly 'com.github.javaparser:javaparser-symbol-solver-core:3.25.8'
+    compileOnly 'com.github.javaparser:javaparser-core:3.25.8'
+    compileOnly "org.vineflower:vineflower:1.11.0"
+    include 'com.github.javaparser:javaparser-symbol-solver-core:3.25.8'
+    include 'com.github.javaparser:javaparser-core:3.25.8'
+    include "org.vineflower:vineflower:1.11.0"
 }
 
 processResources {
