--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ org.gradle.daemon=false
 loom.platform=forge
 
 lombok_version=1.18.32
+vineflower_version=1.10.1
 
 # Base properties
     # minecraft version
