--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "dev.architectury.loom" version "1.3-SNAPSHOT"
     id "maven-publish"
-    id "io.github.juuxel.loom-vineflower" version rootProject.vineflower_version apply false
 }
 
 base {
@@ -115,10 +114,10 @@ dependencies {
     //
     compileOnly 'com.github.javaparser:javaparser-symbol-solver-core:3.25.8'
     compileOnly 'com.github.javaparser:javaparser-core:3.25.8'
-    compileOnly "org.vineflower:vineflower:1.11.0"
+    compileOnly "org.vineflower:vineflower:${project.vineflower_version}"
     include 'com.github.javaparser:javaparser-symbol-solver-core:3.25.8'
     include 'com.github.javaparser:javaparser-core:3.25.8'
-    include "org.vineflower:vineflower:1.11.0"
+    include "org.vineflower:vineflower:${project.vineflower_version}"
 }
 
 processResources {
