--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,7 @@ dependencies {
     // modCompileOnly "mezz.jei:jei-1.16.5:${jei_version}:api"
     // at runtime, use the full JEI jar
     // modRuntimeOnly "mezz.jei:jei-1.16.5:${jei_version}"
-    modImplementation("curse.maven:rhizo-1003287:5506575")
+    modApi("curse.maven:rhizo-1003287:5506575")
     modApi("dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}")
     //lombok
     compileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
@@ -120,16 +120,10 @@ dependencies {
     annotationProcessor 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     compileOnly 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     //
-    implementation('org.java-websocket:Java-WebSocket:1.5.6')
-    implementation('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
-    implementation('com.github.javaparser:javaparser-core:3.25.8')
-    implementation("org.vineflower:vineflower:${project.vineflower_version}")
-    include('org.java-websocket:Java-WebSocket:1.5.6')
-    include('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
-    include('com.github.javaparser:javaparser-core:3.25.8')
-    include("org.vineflower:vineflower:${project.vineflower_version}")
-    //https://central.sonatype.com/artifact/com.google.jimfs/jimfs/
-    shade('com.google.jimfs:jimfs:1.3.0') { transitive = false }
+    shade('org.java-websocket:Java-WebSocket:1.5.6')
+    shade('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
+    shade('com.github.javaparser:javaparser-core:3.25.8')
+    shade("org.vineflower:vineflower:${project.vineflower_version}")
 }
 
 processResources {
@@ -168,21 +162,19 @@ jar {
     // add some additional metadata to the jar manifest
     manifest {
         attributes([
-                "Specification-Title"     : project.mod_id,
-                "Specification-Vendor"    : project.mod_author,
-                "Specification-Version"   : "1",
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : version,
-                "Implementation-Vendor"   : project.mod_author,
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+            "Specification-Title"     : project.mod_id,
+            "Specification-Vendor"    : project.mod_author,
+            "Specification-Version"   : "1",
+            "Implementation-Title"    : project.name,
+            "Implementation-Version"  : version,
+            "Implementation-Vendor"   : project.mod_author,
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
 shadowJar {
     archiveClassifier.set("shadow")
-
-    relocate("com.google.common.jimfs", "com.probejs.shaded.jimfs")
 
     configurations = [project.configurations.shade]
 }
