--- a/build.gradle
+++ b/build.gradle
@@ -120,15 +120,10 @@ dependencies {
     annotationProcessor 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     compileOnly 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     //
-    implementation('org.java-websocket:Java-WebSocket:1.5.6')
-    implementation('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
-    implementation('com.github.javaparser:javaparser-core:3.25.8')
-    implementation("org.vineflower:vineflower:${project.vineflower_version}")
-
-    include('org.java-websocket:Java-WebSocket:1.5.6')
-    include('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
-    include('com.github.javaparser:javaparser-core:3.25.8')
-    include("org.vineflower:vineflower:${project.vineflower_version}")
+    shade('org.java-websocket:Java-WebSocket:1.5.6')
+    shade('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
+    shade('com.github.javaparser:javaparser-core:3.25.8')
+//    implementation("org.vineflower:vineflower:${project.vineflower_version}")
 }
 
 processResources {
