--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     // modCompileOnly "mezz.jei:jei-1.16.5:${jei_version}:api"
     // at runtime, use the full JEI jar
     // modRuntimeOnly "mezz.jei:jei-1.16.5:${jei_version}"
+    modApi("curse.maven:rhizo-1003287:5506575")
     modApi "dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}"
     //lombok
     compileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
