--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "1.16.5" ]
+    branches: [ "1.16.5-3.x" ]
   pull_request:
-    branches: [ "1.16.5" ]
+    branches: [ "1.16.5-3.x" ]
 
 permissions:
   contents: read
