--- a/build.gradle
+++ b/build.gradle
@@ -139,7 +139,7 @@ processResources {
     }
 }
 
-tasks.withType(JavaCompile) {
+configure([tasks.compileJava]) {
     // ensure that the encoding is set to UTF-8, no matter what the system default is
     // this fixes some edge cases with special characters not displaying correctly
     // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
@@ -158,6 +158,8 @@ java {
     // if it is present.
     // If you remove this line, sources will not be generated.
     withSourcesJar()
+
+    setSourceCompatibility(JavaVersion.VERSION_21)
 }
 
 jar {
