--- a/build.gradle
+++ b/build.gradle
@@ -111,13 +111,13 @@ dependencies {
     // modCompileOnly "mezz.jei:jei-1.16.5:${jei_version}:api"
     // at runtime, use the full JEI jar
     // modRuntimeOnly "mezz.jei:jei-1.16.5:${jei_version}"
-    modApi("curse.maven:rhizo-1003287:5506575")
-    modApi("dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}")
+    modApi("curse.maven:rhizo-1003287:5997857")
+    modApi("dev.latvian.mods:kubejs-forge:${kubejs_version}")
     //lombok
-    compileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
-    annotationProcessor "org.projectlombok:lombok:${rootProject.lombok_version}"
-    testCompileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
-    testAnnotationProcessor "org.projectlombok:lombok:${rootProject.lombok_version}"
+    compileOnly "org.projectlombok:lombok:${lombok_version}"
+    annotationProcessor "org.projectlombok:lombok:${lombok_version}"
+    testCompileOnly "org.projectlombok:lombok:${lombok_version}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombok_version}"
     // https://mvnrepository.com/artifact/com.pkware.jabel/jabel-javac-plugin
     annotationProcessor 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     compileOnly 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
