--- a/build.gradle
+++ b/build.gradle
@@ -112,15 +112,20 @@ dependencies {
     // at runtime, use the full JEI jar
     // modRuntimeOnly "mezz.jei:jei-1.16.5:${jei_version}"
     modApi("curse.maven:rhizo-1003287:5997857")
-    modApi("dev.latvian.mods:kubejs-forge:${kubejs_version}")
+    modApi("dev.latvian.mods:kubejs-forge:${kubejs_version}") {
+        exclude([group: 'dev.latvian.mods', module: 'rhino-forge'])
+    }
+
     //lombok
     compileOnly "org.projectlombok:lombok:${lombok_version}"
     annotationProcessor "org.projectlombok:lombok:${lombok_version}"
     testCompileOnly "org.projectlombok:lombok:${lombok_version}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombok_version}"
+
     // https://mvnrepository.com/artifact/com.pkware.jabel/jabel-javac-plugin
     annotationProcessor 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
     compileOnly 'com.pkware.jabel:jabel-javac-plugin:1.0.1-1'
+
     //
     shade('org.java-websocket:Java-WebSocket:1.5.6')
 //    shade('com.github.javaparser:javaparser-symbol-solver-core:3.25.8')
